GH-25 - Vertical scrollbar now no longer appears in footer.

--- a/theserverproject/src/pages/Home/components/Footer/Footer.css
+++ b/theserverproject/src/pages/Home/components/Footer/Footer.css
@@ -5,7 +5,8 @@
     height: var(--footer-height);
     background-color: var(--text-bg-color);
     display: flex;
-    overflow: auto;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 /* Footer Classes */
